--- a/.gitignore
+++ b/.gitignore
@@ -85,4 +85,7 @@ fastlane/test_output
 
 iOSInjectionProject/
 
+# Ignore GoogleService-Info.plist
+GoogleService-Info.plist
+
 # End of https://www.toptal.com/developers/gitignore/api/swift
