--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,5 +1,7 @@
 excluded:
   - Pods
+  - PantryPal/AppDelegate.swift
+  - PantryPal/SceneDelegate.swift
 disabled_rules:
   - trailing_whitespace
 identifier_name:
