--- a/PantryPal/Info.plist
+++ b/PantryPal/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>需要使用到相簿</string>
 	<key>NSCameraUsageDescription</key>
 	<string>需要使用到相機</string>
 	<key>UIApplicationSceneManifest</key>
